newclay/test/Compiler/Propagation/Fail/RefLocal2/main.clay

define main;
overload main() {
    var x = true;
    return forward x;
}

